[gd_scene load_steps=5 format=3 uid="uid://bvceavygkh1ve"]

[ext_resource type="Script" uid="uid://djehq6i216rf3" path="res://Scene/UI/title_scene.gd" id="1_i71bt"]
[ext_resource type="Texture2D" uid="uid://dwm70o5o4tsg2" path="res://Assert/Art/UI/logo.png" id="1_x66rq"]
[ext_resource type="Texture2D" uid="uid://bsit0klc3d5lm" path="res://Assert/Art/bg.jpg" id="3_i71bt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpxyg"]
content_margin_left = 50.0
content_margin_top = 10.0
content_margin_right = 50.0
content_margin_bottom = 10.0
bg_color = Color(0.23137255, 0.23137255, 0.23137255, 0.6627451)

[node name="TitleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i71bt")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_i71bt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_x66rq")
stretch_mode = 5

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8842199, 0, 0.2336216, 1)
theme_override_font_sizes/font_size = 100
text = "Paws Up!"
horizontal_alignment = 1

[node name="MainButton" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MainButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_lpxyg")
text = "Start"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/MainButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_lpxyg")
text = "Options"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/MainButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_lpxyg")
text = "Quit"

[node name="OptionButton" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/OptionButton"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OptionButton/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Volume:"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/OptionButton/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 0.5

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/OptionButton/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Language:"

[node name="MenuButton" type="MenuButton" parent="MarginContainer/VBoxContainer/OptionButton/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.19215687, 0.76862746, 1)
theme_override_font_sizes/font_size = 60
text = "Select Your Language"
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "简体中文"
popup/item_1/id = 1

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 1
offset_right = 176.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(1, 0, 0.92156863, 1)
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MainButton/Button" to="." method="_on_start"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainButton/Button2" to="." method="_on_options"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainButton/Button3" to="." method="_on_quit"]
[connection signal="pressed" from="Back" to="." method="_on_back"]
